Dark mode color fix

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 }
 #dark .bgBodyPrimary{
     background-color: #0E1629;
+    opacity: .99;
 }
 
 #light .bgBodySecondary{
@@ -34,10 +35,10 @@
 }
 
 #light .borderColor{
-    border: 1px solid rgba(71,85,105,.1);
+    border-color: rgba(248,250,252,.08);
 }
 #dark .borderColor{
-    border: 1px solid rgba(248,250,252,.08);
+    border-color: rgba(71,85,105,.1);
 }
 
 #light .textHeading{
@@ -66,4 +67,19 @@
 }
 #dark .btnBg{
     background-color: #0284C7;
+}
+
+
+#dark .textHoverColor:hover{
+    color: #0F172A;
+}
+#light .textHoverColor:hover{
+    color: #0F172A;
+}
+
+#dark .textHoverColor2:hover{
+    color: #E2E8F0;
+}
+#light .textHoverColor2:hover{
+    color: #0F172A;
 }
